<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.olivia</groupId>
  <artifactId>peanut-base</artifactId>
  <version>2.0.2-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>peanut-base</name>
  <url>https://maven.apache.org</url>

  <properties>
    <java.version>21</java.version>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <camunda.spring-boot.version>7.21.0</camunda.spring-boot.version>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <spring.boot.version>3.4.0</spring.boot.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.olivia</groupId>
      <artifactId>peanut-sdk</artifactId>
      <version>2.0.2-SNAPSHOT</version>
    </dependency>
<!--    <dependency>-->
<!--      <groupId>org.springframework.boot</groupId>-->
<!--      <artifactId>spring-boot-starter-mail</artifactId>-->
<!--    </dependency>-->
    <dependency>
      <groupId>com.mysql</groupId>
      <artifactId>mysql-connector-j</artifactId>
      <version>9.1.0</version>
    </dependency>
    <dependency>
      <groupId>com.belerweb</groupId>
      <artifactId>pinyin4j</artifactId>
      <version>2.5.1</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mapstruct</groupId>
      <artifactId>mapstruct</artifactId>
      <version>1.6.3</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>


  <build>
    <plugins>

      <plugin>
        <artifactId>maven-jar-plugin</artifactId>
        <configuration>
            <excludes>
              <!-- 排除 src/main/resources 目录下的所有 .properties 和 .xml 文件 -->
<!--              <exclude>**/*.properties</exclude>-->
              <exclude>**/*.yml</exclude>
<!--              <exclude>**/*.yaml</exclude>-->
              <exclude>**/*.xml</exclude>
            </excludes>
          <archive>
            <manifest>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
              <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
            </manifest>
            <manifestEntries>
              <build-time>${maven.build.timestamp}</build-time>
              <build-version>${version}</build-version>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <source>21</source>
          <target>21</target>
          <annotationProcessorPaths>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>1.18.36</version>
            </path>
            <path>
              <groupId>org.mapstruct</groupId>
              <artifactId>mapstruct-processor</artifactId>
              <version>1.6.3</version>
            </path>

          </annotationProcessorPaths>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <parent>
    <artifactId>spring-boot-starter-parent</artifactId>
    <groupId>org.springframework.boot</groupId>
    <version>3.5.3</version>
    <!--        <version>3.4.3</version>-->
  </parent>
</project>
